--- a/.github/workflows/forecast.yml
+++ b/.github/workflows/forecast.yml
@@ -149,6 +149,7 @@ jobs:
       - uses: actions/cache/restore@v4
         with:
           key: ${{ inputs.post_id }}/forecasts/revision.${{ matrix.forecaster_index }}.json
+          path: tmp/${{ inputs.post_id }}/forecasts/revision.${{ matrix.forecaster_index }}.json
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.4'
