feat: update forecast workflow configuration
- Fix typo in workflow name from 'eame' to 'name'
- Add cache restore path for consensus.json file
- Update Ruby setup version to 3.4

--- a/.github/workflows/forecast.yml
+++ b/.github/workflows/forecast.yml
@@ -1,4 +1,4 @@
-name: Forecast
+eame: Forecast
 
 on:
   workflow_call:
@@ -213,6 +213,7 @@ jobs:
       - uses: actions/cache/restore@v4
         with:
           key: ${{ inputs.post_id }}/forecasts/consensus.json
+          path: tmp/${{ inputs.post_id }}/forecasts/consensus.json
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.4'
