--- a/.github/workflows/forecast.yml
+++ b/.github/workflows/forecast.yml
@@ -37,7 +37,7 @@ jobs:
       - uses: actions/checkout@v5
       - uses: actions/cache/restore@v4
         with:
-          key: ${{ inputs.post_id }}/research.json
+          key:  tmp/${{ inputs.post_id }}/research.json
           path: tmp/${{ inputs.post_id }}/research.json
       - uses: ruby/setup-ruby@v1
         with:
@@ -52,7 +52,7 @@ jobs:
           PERPLEXITY_API_KEY: ${{ secrets.PERPLEXITY_API_KEY }}
       - uses: actions/cache/save@v4
         with:
-          key: ${{ inputs.post_id }}/research.json
+          key:  tmp/${{ inputs.post_id }}/research.json
           path: tmp/${{ inputs.post_id }}/research.json
       - run: |
           echo "# $(cat tmp/${{ inputs.post_id }}/post.json | jq -r '.title')" >> $GITHUB_STEP_SUMMARY
@@ -77,11 +77,11 @@ jobs:
       - uses: actions/checkout@v5
       - uses: actions/cache/restore@v4
         with:
-          key: ${{ inputs.post_id }}/research.json
+          key:  tmp/${{ inputs.post_id }}/research.json
           path: tmp/${{ inputs.post_id }}/research.json
       - uses: actions/cache/restore@v4
         with:
-          key: ${{ inputs.post_id }}/forecasts/forecast.${{ matrix.forecaster_index }}.json
+          key:  tmp/${{ inputs.post_id }}/forecasts/forecast.${{ matrix.forecaster_index }}.json
           path: tmp/${{ inputs.post_id }}/forecasts/forecast.${{ matrix.forecaster_index }}.json
       - uses: ruby/setup-ruby@v1
         with:
@@ -96,7 +96,7 @@ jobs:
           PERPLEXITY_API_KEY: ${{ secrets.PERPLEXITY_API_KEY }}
       - uses: actions/cache/save@v4
         with:
-          key: ${{ inputs.post_id }}/forecasts/forecast.${{ matrix.forecaster_index }}.json
+          key:  tmp/${{ inputs.post_id }}/forecasts/forecast.${{ matrix.forecaster_index }}.json
           path: tmp/${{ inputs.post_id }}/forecasts/forecast.${{ matrix.forecaster_index }}.json
       - run: |
           ./forecast_result.rb ${{ inputs.post_id }} ${{ matrix.forecaster_index }} forecast >> $GITHUB_STEP_SUMMARY
@@ -120,35 +120,35 @@ jobs:
       - uses: actions/checkout@v5
       - uses: actions/cache/restore@v4
         with:
-          key: ${{ inputs.post_id }}/research.json
+          key:  tmp/${{ inputs.post_id }}/research.json
           path: tmp/${{ inputs.post_id }}/research.json
       - uses: actions/cache/restore@v4
         with:
-          key: ${{ inputs.post_id }}/forecasts/forecast.0.json
+          key:  tmp/${{ inputs.post_id }}/forecasts/forecast.0.json
           path: tmp/${{ inputs.post_id }}/forecasts/forecast.0.json
       - uses: actions/cache/restore@v4
         with:
-          key: ${{ inputs.post_id }}/forecasts/forecast.1.json
+          key:  tmp/${{ inputs.post_id }}/forecasts/forecast.1.json
           path: tmp/${{ inputs.post_id }}/forecasts/forecast.1.json
       - uses: actions/cache/restore@v4
         with:
-          key: ${{ inputs.post_id }}/forecasts/forecast.2.json
+          key:  tmp/${{ inputs.post_id }}/forecasts/forecast.2.json
           path: tmp/${{ inputs.post_id }}/forecasts/forecast.2.json
       - uses: actions/cache/restore@v4
         with:
-          key: ${{ inputs.post_id }}/forecasts/forecast.3.json
+          key:  tmp/${{ inputs.post_id }}/forecasts/forecast.3.json
           path: tmp/${{ inputs.post_id }}/forecasts/forecast.3.json
       - uses: actions/cache/restore@v4
         with:
-          key: ${{ inputs.post_id }}/forecasts/forecast.4.json
+          key:  tmp/${{ inputs.post_id }}/forecasts/forecast.4.json
           path: tmp/${{ inputs.post_id }}/forecasts/forecast.4.json
       - uses: actions/cache/restore@v4
         with:
-          key: ${{ inputs.post_id }}/forecasts/forecast.5.json
+          key:  tmp/${{ inputs.post_id }}/forecasts/forecast.5.json
           path: tmp/${{ inputs.post_id }}/forecasts/forecast.5.json
       - uses: actions/cache/restore@v4
         with:
-          key: ${{ inputs.post_id }}/forecasts/revision.${{ matrix.forecaster_index }}.json
+          key:  tmp/${{ inputs.post_id }}/forecasts/revision.${{ matrix.forecaster_index }}.json
           path: tmp/${{ inputs.post_id }}/forecasts/revision.${{ matrix.forecaster_index }}.json
       - uses: ruby/setup-ruby@v1
         with:
@@ -163,7 +163,7 @@ jobs:
           PERPLEXITY_API_KEY: ${{ secrets.PERPLEXITY_API_KEY }}
       - uses: actions/cache/save@v4
         with:
-          key: ${{ inputs.post_id }}/forecasts/revision.${{ matrix.forecaster_index }}.json
+          key:  tmp/${{ inputs.post_id }}/forecasts/revision.${{ matrix.forecaster_index }}.json
           path: tmp/${{ inputs.post_id }}/forecasts/revision.${{ matrix.forecaster_index }}.json
       - run: |
           ./forecast_result.rb ${{ inputs.post_id }} ${{ matrix.forecaster_index }} revision >> $GITHUB_STEP_SUMMARY
@@ -184,35 +184,35 @@ jobs:
       - uses: actions/checkout@v5
       - uses: actions/cache/restore@v4
         with:
-          key: ${{ inputs.post_id }}/research.json
+          key:  tmp/${{ inputs.post_id }}/research.json
           path: tmp/${{ inputs.post_id }}/research.json
       - uses: actions/cache/restore@v4
         with:
-          key: ${{ inputs.post_id }}/forecasts/revision.0.json
+          key:  tmp/${{ inputs.post_id }}/forecasts/revision.0.json
           path: tmp/${{ inputs.post_id }}/forecasts/revision.0.json
       - uses: actions/cache/restore@v4
         with:
-          key: ${{ inputs.post_id }}/forecasts/revision.1.json
+          key:  tmp/${{ inputs.post_id }}/forecasts/revision.1.json
           path: tmp/${{ inputs.post_id }}/forecasts/revision.1.json
       - uses: actions/cache/restore@v4
         with:
-          key: ${{ inputs.post_id }}/forecasts/revision.2.json
+          key:  tmp/${{ inputs.post_id }}/forecasts/revision.2.json
           path: tmp/${{ inputs.post_id }}/forecasts/revision.2.json
       - uses: actions/cache/restore@v4
         with:
-          key: ${{ inputs.post_id }}/forecasts/revision.3.json
+          key:  tmp/${{ inputs.post_id }}/forecasts/revision.3.json
           path: tmp/${{ inputs.post_id }}/forecasts/revision.3.json
       - uses: actions/cache/restore@v4
         with:
-          key: ${{ inputs.post_id }}/forecasts/revision.4.json
+          key:  tmp/${{ inputs.post_id }}/forecasts/revision.4.json
           path: tmp/${{ inputs.post_id }}/forecasts/revision.4.json
       - uses: actions/cache/restore@v4
         with:
-          key: ${{ inputs.post_id }}/forecasts/revision.5.json
+          key:  tmp/${{ inputs.post_id }}/forecasts/revision.5.json
           path: tmp/${{ inputs.post_id }}/forecasts/revision.5.json
       - uses: actions/cache/restore@v4
         with:
-          key: ${{ inputs.post_id }}/forecasts/consensus.json
+          key:  tmp/${{ inputs.post_id }}/forecasts/consensus.json
           path: tmp/${{ inputs.post_id }}/forecasts/consensus.json
       - uses: ruby/setup-ruby@v1
         with:
@@ -227,7 +227,7 @@ jobs:
           PERPLEXITY_API_KEY: ${{ secrets.PERPLEXITY_API_KEY }}
       - uses: actions/cache/save@v4
         with:
-          key: ${{ inputs.post_id }}/forecasts/consensus.json
+          key:  tmp/${{ inputs.post_id }}/forecasts/consensus.json
           path: tmp/${{ inputs.post_id }}/forecasts/consensus.json
       - run: |
           echo "$(cat tmp/${{ inputs.post_id }}/consensus/forecast.json | jq -r '.[] | .continuous_cdf // .probability_yes // .probability_yes_per_category')" >> $GITHUB_STEP_SUMMARY
