--- a/.github/workflows/forecast.yml
+++ b/.github/workflows/forecast.yml
@@ -72,6 +72,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        fail_fast: false
         forecaster_index: [0, 1, 2, 3, 4, 5]
     steps:
       - uses: actions/checkout@v5
@@ -116,6 +117,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        fail_fast: false
         forecaster_index: [0, 1, 2, 3, 4, 5]
     steps:
       - uses: actions/checkout@v5
