--- a/.github/workflows/forecast.yml
+++ b/.github/workflows/forecast.yml
@@ -75,8 +75,8 @@ jobs:
       - uses: actions/checkout@v5
       - uses: actions/cache/restore@v4
         with:
-          key:  tmp/${{ inputs.post_id }}/output/news.md
-          path: tmp/${{ inputs.post_id }}/output/news.md
+          key:  tmp/${{ inputs.post_id }}/outputs/news.md
+          path: tmp/${{ inputs.post_id }}/outputs/news.md
       - uses: actions/cache/restore@v4
         with:
           key:  tmp/${{ inputs.post_id }}/research.json
