convert research to deepseak reasoning with perplexity search based tool use

--- a/.github/workflows/forecast.yml
+++ b/.github/workflows/forecast.yml
@@ -85,7 +85,7 @@ jobs:
         with:
           ruby-version: '3.4'
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-      - run: ./research.rb ${{ inputs.post_id }}
+      - run: ./tools_research.rb ${{ inputs.post_id }}
         env:
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
           DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
