ci: handle empty post_ids in tournament workflow
- add additional check to prevent workflow from running on completely empty output
- ensures workflow only triggers when meaningful post IDs are available
- improves reliability of scheduled forecasting job

--- a/.github/workflows/tournament.yml
+++ b/.github/workflows/tournament.yml
@@ -23,7 +23,7 @@ jobs:
           METACULUS_BOT_ID: ${{ secrets.METACULUS_BOT_ID }}
 
   enqueue:
-    if: ${{ needs.query.outputs.post_ids != '[]' }}
+    if: ${{ needs.query.outputs.post_ids != '' && needs.query.outputs.post_ids != '[]' }}
     needs: query
     strategy:
       matrix:
