feat(ci): refine concurrency group for forecast workflow
- Enhance workflow concurrency to prevent parallel runs for same post
- Include post_id in concurrency group for more precise run isolation

--- a/.github/workflows/forecast.yml
+++ b/.github/workflows/forecast.yml
@@ -27,9 +27,9 @@ on:
         required: true
         type: string
 
-# prevent parallel runs
+# prevent parallel runs for same post_id
 concurrency:
-  group: ${{ github.workflow }}
+  group: ${{ github.workflow + '+' + inputs.post_id }}
   cancel-in-progress: false
 
 jobs:
