chore(ci): update workflow concurrency group syntax
- Replace string concatenation with `join()` function for better readability
- Maintain existing concurrency behavior for forecasting workflows

--- a/.github/workflows/forecast.yml
+++ b/.github/workflows/forecast.yml
@@ -29,7 +29,7 @@ on:
 
 # prevent parallel runs for same post_id
 concurrency:
-  group: ${{ github.workflow + '+' + inputs.post_id }}
+  group: ${{ join(github.workflow, '+', inputs.post_id) }}
   cancel-in-progress: false
 
 jobs:
