ci(workflows): improve concurrency group identifiers
- Refactor concurrency groups in forecast and tournament workflows
- Add specific identifiers to prevent potential unintended job cancellations
- Enhance uniqueness of workflow job groups using `github.workflow` and additional identifiers

--- a/.github/workflows/tournament.yml
+++ b/.github/workflows/tournament.yml
@@ -29,7 +29,7 @@ jobs:
       matrix:
         post_id: ${{ fromJSON(needs.query.outputs.post_ids) }}
     concurrency:
-      group: scheduled-forecast-enqueue
+      group: ${{ github.workflow }}+enqueue+${{ matrix.post_id }}
       cancel-in-progress: false
     secrets:
       ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
