--- a/.github/workflows/forecast.yml
+++ b/.github/workflows/forecast.yml
@@ -29,7 +29,7 @@ on:
 
 # prevent parallel runs for same post_id
 concurrency:
-  group: ${{ format('{0}+{1}', github.workflow, inputs.post_id) }}
+  group: ${{ github.workflow }}+${{ inputs.post_id }}
   cancel-in-progress: false
 
 jobs:
