ci: add fail-fast false to tournament workflow matrix strategy
- Allows other matrix jobs to continue running if one job fails
- Prevents entire workflow from stopping due to a single job failure
- Increases robustness of tournament workflow execution

--- a/.github/workflows/tournament.yml
+++ b/.github/workflows/tournament.yml
@@ -26,6 +26,7 @@ jobs:
     if: ${{ needs.query.outputs.post_ids != '' && needs.query.outputs.post_ids != '[]' }}
     needs: query
     strategy:
+      fail-fast: false
       matrix:
         post_id: ${{ fromJSON(needs.query.outputs.post_ids) }}
     concurrency:
