--- a/.github/workflows/open_router.yml
+++ b/.github/workflows/open_router.yml
@@ -11,5 +11,5 @@ jobs:
     steps:
       - id: check
         run: |
-          echo "LIMIT_REMAINING=$(curl "https://openrouter.ai/api/v1/key" -H "Authorization: Bearer $OPEN_ROUTER_API_KEY" | jq -c '.data.limit_remaining')" >> $GITHUB_ENV
+          echo "LIMIT_REMAINING=$(curl "https://openrouter.ai/api/v1/key" -H "Authorization: Bearer $OPEN_ROUTER_API_KEY")" >> $GITHUB_ENV
           echo "${{ env.LIMIT_REMAINING }}" >> $GITHUB_STEP_SUMMARY
