--- a/.github/workflows/forecast.yml
+++ b/.github/workflows/forecast.yml
@@ -119,7 +119,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        forecaster_index: [0, 1, 2]
+        forecaster_index: [0, 1, 2, 3]
     steps:
       - uses: actions/checkout@v6
       - uses: actions/cache/restore@v5
@@ -165,7 +165,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        forecaster_index: [0, 1, 2]
+        forecaster_index: [0, 1, 2, 3]
     steps:
       - uses: actions/checkout@v6
       - uses: actions/cache/restore@v5
