add missing runs-on

--- a/.github/workflows/tournament.yml
+++ b/.github/workflows/tournament.yml
@@ -51,6 +51,7 @@ jobs:
       - enqueue
     permissions:
       actions: write
+    runs-on: ubuntu-latest
     steps:
       run: gh run delete ${{ github.run_id }}
       env:
