--- a/.github/workflows/tournament.yml
+++ b/.github/workflows/tournament.yml
@@ -53,6 +53,6 @@ jobs:
       actions: write
     runs-on: ubuntu-latest
     steps:
-      run: gh run delete ${{ github.run_id }}
-      env:
+      - run: gh run delete ${{ github.run_id }}
+        env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
