--- a/.github/workflows/tournament.yml
+++ b/.github/workflows/tournament.yml
@@ -24,7 +24,8 @@ jobs:
           METACULUS_BOT_API_TOKEN: ${{ secrets.METACULUS_BOT_API_TOKEN }}
           METACULUS_BOT_ID: ${{ secrets.METACULUS_BOT_ID }}
       - if: steps.post_ids.outputs.post_ids == '' || steps.post_ids.outputs.post_ids == '[]'
-        run: gh run delete ${{ github.run_id }}
+        run: |
+          gh run delete ${{ github.run_id }} --repo geemus/metaculus-ai-forecasting
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
