--- a/.github/workflows/tournament.yml
+++ b/.github/workflows/tournament.yml
@@ -25,7 +25,7 @@ jobs:
           METACULUS_BOT_ID: ${{ secrets.METACULUS_BOT_ID }}
       - if: steps.post_ids.outputs.post_ids == '' || steps.post_ids.outputs.post_ids == '[]'
         run: |
-          gh run delete ${{ github.run_id }} --repo geemus/metaculus-ai-forecasting
+          gh run delete ${{ github.run_id }} --repo ${{ github.repository }}
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
